--- a/Watch.html
+++ b/Watch.html
@@ -84,10 +84,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="banner-final">
-                    <img src="imgWatch/banner.webp">
+            </section>
+                <section class="categories">
+                    <h2 class="section-title"><span class="line">DANH MỤC NỔI BẬT</span></h2>
+                    <div class="category-list">
+                    <div class="category-item">
+                        <a href=""> <img src="imgWatch/menW.jpg">
+                        <p>Đồng hồ nam</p></a>
+                    </div>
+                    <div class="category-item">
+                        <a href=""><img src="imgWatch/womeW.jpg">
+                        <p>Đồng hồ nữ</p></a>
+                    </div>
                 </div>
             </section>
+            <div class="banner-final">
+                <img src="imgWatch/banner.webp">
+            </div>
             <section class="products">
                 <h2 class="section-title"><span class="line">SẢN PHẨM BÁN CHẠY</span></h2>
                 <div class="products-list">
